--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "izzaalfiansyah",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.5.1",
     "puppeteer": "^21.3.6",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.22.1"
