--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "whatsapp-web.js": "^1.22.1"
   },
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "node src/index.js",
+    "build": "node src/index.js"
   }
 }
