--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
+    "express": "^4.18.2",
     "puppeteer": "^21.3.6",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.22.1"
   },
   "scripts": {
-    "dev": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "build": "node src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
