--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "whatsapp-web.js": "^1.22.1"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "build": "node src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
