--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 node_modules/*
-.wwebjs_auth/session/Default/Cache
-.wwebjs_auth/session/Default/Cache/*
-.wwebjs_auth/session/Default/GPUCache
-.wwebjs_auth/session/Default/GPUCache/*
+.wwebjs_cache
+.wwebjs_cache/*
+.wwebjs_auth
+.wwebjs_auth/*
